neue tabelle kompiliert

--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -12,7 +12,7 @@
 \lstinputlisting[basicstyle=\footnotesize, label=code1, caption=Implementierung der Simulation in python]{sourceCode/simulation.py}
 
 \begin{center}
-\begin{longtable}{lllll}
+\begin{longtable}{llllllllll}
 \caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen. (Jeder 10. Messpunkt wird dargestellt.)} \label{xy-table}\\
 \hline
 \textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} \\
@@ -28,6 +28,6 @@
 \endfoot
 \hline
 \endlastfoot
-\input{data/shorttable.tex}
+\input{data/tbl_v_E}
 \end{longtable}
 \end{center}
