--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -15,13 +15,13 @@
 \begin{longtable}{llllllllll}
 \caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen. (Jeder 10. Messpunkt wird dargestellt.)} \label{xy-table}\\
 \hline
-\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} \\
+\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} & \textbf{x-Geschw. $m_1$} & \textbf{y-Geschw. $m_1$} & \textbf{x-Geschw. $m_2$}& \textbf{y-Geschw. $m_2$}& \textbf{Energie $E$}\\
 \hline
 \endfirsthead
 \multicolumn{4}{c}%
 {\tablename\ \thetable\ -- \textit{Fortsetzung}} \\
 \hline
-\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} \\
+\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} & \textbf{x-Geschw. $m_1$} & \textbf{y-Geschw. $m_1$} & \textbf{x-Geschw. $m_2$}& \textbf{y-Geschw. $m_2$}& \textbf{Energie $E$}\\
 \hline
 \endhead
 \hline \multicolumn{4}{r}{\textit{Fortsetzung auf der nächsten Seite}} \\
