--- a/versuch_3/anhang.tex
+++ b/versuch_3/anhang.tex
@@ -10,12 +10,12 @@
 \lstset{inputencoding=utf8/latin1}
 \lstset{numbers=left, numberstyle=\tiny, stepnumber=2, numbersep=5pt}
 \lstinputlisting[basicstyle=\footnotesize, label=code1, caption=Implementierung der Simulation in python]{sourceCode/simulation.py}
-
+\tiny
 \begin{center}
 \begin{longtable}{llllllllll}
 \caption{Verlauf der Position der beiden Massen über die Zeit des Versuchs. Dabei wird t in s und die Position in m gemessen. (Jeder 10. Messpunkt wird dargestellt.)} \label{xy-table}\\
 \hline
-\textbf{t} & \textbf{x-Pos. $m_1$} & \textbf{y-Pos $m_1$} & \textbf{x-Pos. $m_2$} & \textbf{y-Pos. $m_2$} & \textbf{x-Geschw. $m_1$} & \textbf{y-Geschw. $m_1$} & \textbf{x-Geschw. $m_2$}& \textbf{y-Geschw. $m_2$}& \textbf{Energie $E$}\\
+\textbf{t} & \textbf{x-Pos.$m_1$} & \textbf{y-Pos.$m_1$} & \textbf{x-Pos.$m_2$} & \textbf{y-Pos.$m_2$} & \textbf{x-Geschw.$m_1$} & \textbf{y-Geschw.$m_1$} & \textbf{x-Geschw.$m_2$}& \textbf{y-Geschw.$m_2$}& \textbf{Energie$E$}\\
 \hline
 \endfirsthead
 \multicolumn{4}{c}%
