satz zur synchronisierung geschrieben

--- a/versuch_4/ergebnisse.tex
+++ b/versuch_4/ergebnisse.tex
@@ -40,7 +40,7 @@ Die Ergebnisse sind in Abbildung \ref{fig:Kalibration} dargestellt. Die Werte au
 \end{equation}
 Der Grund für diese Abweichung kann nicht klar bestimmt werden, es ist aber anzunehmen, dass Fehler und Ungenauigkeiten beim 3D-Druckprozess (z.B. rauhe Oberflächen, kleine Verformungen des Materials, etc.) zumindest teilweise dafür verantwortlich sind.
 \subsection{Geschwindigkeitsmessung}
-Für die Auswertung der Geschwindigkeitsmessung wurden die Videoaufnahmen des Tachometers mit denen des Manometers synchronisiert. HIER NOCH WAS ZUR SYNCHRONISIERUNG SCHREIBEN Die Synchronisierung ist jedoch fehlerbehaftet, sodass teilweise Abweichungen von mehreren Sekunden zwischen beiden Videos vorkommen.
+Für die Auswertung der Geschwindigkeitsmessung wurden die Videoaufnahmen des Tachometers mit denen des Manometers synchronisiert. Dazu wurde die Audiospur der beiden Kameras durch die Software Pluraleyes analysiert, welche eine XML Datei zum import in gängige Videoschnittprogramme erstellt. Es stellt sich jedoch heraus, dass die Audiospuren keine gute Qualität aufwiesen. Dies führte zu einer fehlerbehafteten Synchronisierung, sodass teilweise Abweichungen von mehreren Sekunden zwischen beiden Videos vorkommen.
 Aus dem synchronisierten Video wurden dann die Passagen, während denen mit konstanter Geschwindigkeit gefahren wurde, herausgesucht. Aus diesen Passagen wurden dann jeweils ein Startpunkt, an dem die Flüssigkeit im Manometer nicht mehr steigt bzw. fällt, und ein Endpunkt, an dem die Flüssigkeit wieder steigt bzw. fällt, d.h. wenn das Auto wieder beschleunigte bzw. abbremste, gewählt. Das Zeitintervall zwischen Start- und Endpunkt wurde dann in 10 gleiche Teile unterteilt und jeweils am Beginn eines neuen Teils wurde der Wert für den gemessenen Druck auf dem Manometer und der Wert für die mit GPS gemessene Geschwindigkeit aufgeschrieben. (D.h. wenn z.B. ein 40 Sekunden langes Zeitintervall gewählt wurde, wurde alle 4 Sekunden ein Messwert aufgeschrieben.)
 \\
 Für das GPS wurde ein Fehler von $\pm 0,3$ Knoten gewählt, das dies der Wert war, der auch bei stehendem Fahrzeug angezeigt wurde. Für den Druck kann wieder ein Ablesefehler von $\pm 2$ Pa angenommen werden. Die gemessenen Drücke wurden dann über Gleichung (\ref{eq:Geschwindigkeitsformel}) in Geschwindigkeiten umgerechnet, aus denen dann ein Mittelwert und statistischer Fehler bestimmt wurde. Zu dem so bestimmten Mittelwert wurde dann noch die Abweichung (Gleichung (\ref{eq:Abweichung})) hinzuaddiert. Korrekterweise müsste hier wieder bei der Umrechnung der Drücke in Geschwindigkeiten eine Fehlerfortpflanzung nach Gleichung (\ref{eq:Fehlerfortpflanzung}) durchgeführt werden, die Behandlung dieser Fehler ist aber wieder sehr kompliziert und muss deswegen vernachlässigt werden. Für die mit GPS gemessenen Geschwindigkeiten wurden ebenfalls Mittelwerte und statistische Fehler bestimmt.
