Einen Satz zur Theorie ergänzt

--- a/versuch_4/theorie.tex
+++ b/versuch_4/theorie.tex
@@ -167,8 +167,8 @@ Die Grundlage zur Bestimmung von Strömungsgeschwindigkeiten durch Druckmessung 
 \end{equation} 
 Dabei ist $ p_d := p_0 - p $ der dynamische Druck. In der Praxis wird deshalb oft eine Messung des Gesamtdrucks und des statischen Drucks durchgeführt, um aus der Differenz auf die Geschwindigkeit des strömenden Fluids schließen zu können.
 
-\subsubsection{Sonden zur Messung des Gesamtdrucks (Pitot Rohre)}
-Im vorderen Teil eines Körpers stellt sich der Gesamtdruck ein, der dort durch Anbringen einer Bohrung gemessen werden kann. Mit einem parallel zur Strömung ausgerichteten Rohr hat schon Henri Pitot (1732) als erster Strömungsgeschwindigkeiten gemessen. Deshalb bezeichnet man Gesamtdruckrohre als Pitotrohre. Um die Richtungsempfindlichkeit von Pitotrohren zu verbessern wurden verschiedene Kopfformen entwickelt, unter anderem auch ein umhülltes Pitotrohr (siehe rechts unten \aref{sonden}). Der maximale Winkelbereich, um unter $ 1 \% $ Fehler zu bleiben, hängt stark von der jeweiligen Bauweise ab. Er kann bei einer scharfen Vorderkante $ \pm 10^{\circ} $ betragen und reicht beim umhüllten Pitotrohr bis zu $ \pm 60^{\circ} $. Diese Werte sind jedoch nur Richtwerte.
+\subsubsection{Sonden zur Messung des Gesamtdrucks (Pitotrohre)}
+Im vorderen Teil eines Körpers stellt sich der Gesamtdruck ein, der dort durch Anbringen einer Bohrung gemessen werden kann. Mit einem parallel zur Strömung ausgerichteten Rohr hat schon Henri Pitot (1732) als erster Strömungsgeschwindigkeiten gemessen. Deshalb bezeichnet man Gesamtdruckrohre als Pitotrohre. Um die Richtungsempfindlichkeit von Pitotrohren zu verbessern wurden verschiedene Kopfformen entwickelt, unter anderem auch ein umhülltes Pitotrohr (siehe rechts unten \aref{sonden}). Der maximale Winkelbereich, um unter $ 1 \% $ Fehler zu bleiben, hängt stark von der jeweiligen Bauweise ab. Er kann bei einer scharfen Vorderkante $ \pm 10^{\circ} $ betragen und reicht beim umhüllten Pitotrohr bis zu $ \pm 60^{\circ} $. Diese Werte sind jedoch nur Richtwerte. Weiterhin hängt die Richtungsempfindlichkeit auch noch von der Mach-Zahl (Verhältnis von Strömungsgeschwindigkeit zu Schallgeschwindigkeit) ab, mit höherer Geschwindigkeit wird auch die Richtungsempfindlichkeit größer.
 %Abb. zu versch. Köpfen
 \begin{figure}
 	\centering
