--- a/versuch_3/ergebnisse.tex
+++ b/versuch_3/ergebnisse.tex
@@ -70,7 +70,7 @@ Mittels einer Fehlerfortpflanzung ergibt sich:
 \begin{align}
 \Delta E &= \sqrt{(\frac{\partial E}{\partial v_1} \cdot \Delta v_1)^2 + (\frac{\partial E}{\partial v_2} \cdot \Delta v_2)^2} = \sqrt{(m_1 |v_1| \cdot \Delta v_1)^2 + (m_2 |v_2| \cdot \Delta v_2)^2}= \nonumber \\ &= \sqrt{(\Delta v)^2 \cdot (m_1^2 |v_1|^2 + m_2^2 |v_2|^2)}, 
 \end{align}
-wobei $ \Delta v_1 = \Delta v_2 = \Delta v  = 0.01$, der gleiche Fehler beider Geschwindigkeiten ist. Diese Abschätzung gilt nur für unkorrelierte Fehlergrößen, was hier nicht anzunehmen ist. Da in dem hier betrachteten Fall das Pendel mit sehr kleiner Amplitude schwingt, weißt das Verhalten des Pendels kaum chaotische Charakteristika auf, vielmehr schwingen oberes und unteres Pendel teilweise synchron, sodass eine klare Korrelation zwischen $v_1 $ und $v_2$ besteht. Da allerdings nur die Größenordnung des Fehlers abgeschätzt werden soll, kann diese weitere Näherung verwendet werden. 
+wobei $ \Delta v_1 = \Delta v_2 = \Delta v  = 0.01 \frac{m}{s}$, der gleiche Fehler beider Geschwindigkeiten ist. Diese Abschätzung gilt nur für unkorrelierte Fehlergrößen, was hier nicht anzunehmen ist. Da in dem hier betrachteten Fall das Pendel mit sehr kleiner Amplitude schwingt, weist das Verhalten des Pendels kaum chaotische Charakteristika auf, vielmehr schwingen oberes und unteres Pendel teilweise synchron, sodass eine klare Korrelation zwischen $v_1 $ und $v_2$ besteht. Da allerdings nur die Größenordnung des Fehlers abgeschätzt werden soll, kann diese weitere Näherung verwendet werden. 
 Wie deutlich zu erkennen, sind die Fehlerbalken viel zu klein, um die Schwankungen in der Energie zu erklären. Der Grund dafür ist, dass die Annahme einer Kreisbahn falsch ist. Aufgrund der gegenläufigen Geschwindigkeiten hat die Bahn des unteren Pendels für kurze Zeit einen sehr kleinen Krümmungsradius (da sich Aufhängungspunkt verschiebt), woraus ein deutlich größerer Fehler resultiert. 
 
 \begin{figure}
