--- a/versuch_4/vorwort.tex
+++ b/versuch_4/vorwort.tex
@@ -1,3 +1,8 @@
 \section{Vorwort}
-Das Doppelpendel, ein Pendel, an dessen Pendelmasse ein weiteres Pendel befestigt wird, mag zunächst nicht sonderlich interessant erscheinen. Bei genauerer Betrachtung hat dieser simple mechanische Aufbau jedoch einige faszinierende und sogar für aktuelle Forschung relevante Eigenschaften. Das Doppelpendel ist ein einfaches Beispiel für ein chaotisches System, d.h. ein System, dessen zeitliche Entwicklung sich schon bei kleinen Variationen der Anfangsbedingungen stark ändert. Chaotische Systeme haben eine wichtige Bedeutung in der Natur und sind der Hauptfokus eines Teilgebiets der modernen Physik, der Chaosforschung. Mithilfe der Chaosforschung lassen sich z.B. Bevölkerungsentwicklungen, die Bildung von Verkehrsstaus oder das Wetter untersuchen.
-In diesem Versuch soll nun ein Doppelpendel gebaut, die Physik dahinter untersucht und die Bedeutung als chaotisches System am praktischen Beispiel nachvollzogen werden.
+In der Luftfahrt ist es oftmals wichtig. die Bewegungsgeschwindigkeit reltiv zur Luft genau zu bestimmen, da diese wesentlich 
+für etwa die auf das Flugerät wirkende Geschwindigkeit ist. Eine Geschwindigkeitsmessung via etwa GPS kann dies nicht leisten, 
+da sie diese nicht in der Lage ist, Winde relativ zum Erdboden zu berücksichtigen. Aus diesem Grund muss die Messung lokal am 
+Fluggerät vorgenommen werden. Zur Realisierung der Geschwindigkeitsmessung bietet sich ein Pitotrohr an, bei dem die 
+Relativgeschwindigkeit in der Luft mittels des sich ergebenden Staudrucks bestimmt wird. Eine weitere Anwendung dieser Art der 
+Geschwindigkeitsmessung findet sich im Formel-1-Sport, da auch hier für die Aerodynamik des Fahrzeugs die Relativgeschwindigkeit 
+zur Umgebungsluft und nicht die Geschwindigkeit "über Grund" von Bedeutung ist. \\
