Voll krasse Änderungen der bibliography

--- a/versuch_4/bibliography.tex
+++ b/versuch_4/bibliography.tex
@@ -1,9 +1,6 @@
 \pagebreak
 \begin{thebibliography}{9}
 \bibitem[Dem]{troeder} DEMTRÖDER, Wolfgang. Experimentalphysik 1: Mechanik und Warme. Springer DE, 2005.
-\bibitem[Sch]{sch}SCHECK, Florian. Theoretische Physik 1: Mechanik. Von den Newtonschen Gesetzen zum deterministischen Chaos. Springer DE, 2003.
-\bibitem[Reib]{wiki} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
-\bibitem[Eul]{eul} Wikipedia. Tabellarische Auflistung von Rollreibungskoeffizienten. http://de.wikipedia.org/wiki/Rollreibung. (11. Januar 2014)
-\bibitem[Win]{win} Wikipedia. Artikel zu Winddruck und Windlast. http://de.wikipedia.org/wiki/Winddruck (19. November 2014)
-\bibitem[Rol]{rol} Wikipedia. Rollwiderstand. http://de.wikipedia.org/wiki/Rollreibung (19. November 2014)
+\bibitem[Eck]{elmann} ECKELMANN, Helmut. Einführung in die Strömungsmeßtechnik: Teubner, 1997.
+\bibitem[Tac]{ho} Wikipedia. Tachometer. http://de.wikipedia.org/wiki/Tachometer. (13. Februar 2014)
 \end{thebibliography}
