--- a/versuch_4/protokoll.tex
+++ b/versuch_4/protokoll.tex
@@ -1,6 +1,6 @@
 \input{header}
 %\includeonly{theorie}
-\includeonly{theorie,versuchsdurchfuehrung,ergebnisse,anhang}
+%\includeonly{theorie,versuchsdurchfuehrung,ergebnisse,anhang}
 \begin{document}
 
 \title{Geschwindigkeitsmessung mittels Pitotrohr}
