--- a/versuch_4/vorwort.tex
+++ b/versuch_4/vorwort.tex
@@ -1,3 +1,2 @@
 \section{Vorwort}
-Das Doppelpendel, ein Pendel, an dessen Pendelmasse ein weiteres Pendel befestigt wird, mag zunächst nicht sonderlich interessant erscheinen. Bei genauerer Betrachtung hat dieser simple mechanische Aufbau jedoch einige faszinierende und sogar für aktuelle Forschung relevante Eigenschaften. Das Doppelpendel ist ein einfaches Beispiel für ein chaotisches System, d.h. ein System, dessen zeitliche Entwicklung sich schon bei kleinen Variationen der Anfangsbedingungen stark ändert. Chaotische Systeme haben eine wichtige Bedeutung in der Natur und sind der Hauptfokus eines Teilgebiets der modernen Physik, der Chaosforschung. Mithilfe der Chaosforschung lassen sich z.B. Bevölkerungsentwicklungen, die Bildung von Verkehrsstaus oder das Wetter untersuchen.
-In diesem Versuch soll nun ein Doppelpendel gebaut, die Physik dahinter untersucht und die Bedeutung als chaotisches System am praktischen Beispiel nachvollzogen werden.
+Das Pitot Rohr ist ein im 18. Jahrhundert erfundenes Strömungsmessgerät, das nach dem Wasserbauingenieur Henri Pitot, der sich mit Strömungen in Kanälen auseinandersetzte, benannt. Besonders in der Luftfahrt und im Motorsport ist die Messung der Strömungsgeschwindigkeit von besonderer Bedeutung. Um die Messungen zu verbessern wurden unterschiedliche Sondenformen konzipiert, dazu gehören kombinierte Messonden für Stau- und Statischendruck und andere Formen von Messköpfen um unterschiedliche Anstellwinkel zu ermöglichen. Im Flugzeugbau werden heute sowohl mechanische als auch elektronische Varianten der Messrohre eingesetzt. Im folgenden wird eine Sonde mechanischer Bauform betrachtet.
